--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,9 @@
 h1{
     text-align-last: center;
 }
+s {
+    border-top-style: dotted;
+    border-right-style: solid;
+    border-bottom-style: dotted;
+    border-left-style: solid;
+  }
