--- a/static/index.css
+++ b/static/index.css
@@ -1,7 +1,7 @@
 h1{
     text-align-last: center;
 }
-s {
+section {
     border-top-style: dotted;
     border-right-style: solid;
     border-bottom-style: dotted;
