--- a/static/index.css
+++ b/static/index.css
@@ -20,3 +20,10 @@ h3{
   ul{
     list-style: circle;
   }
+
+body{
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
