--- a/static/index.css
+++ b/static/index.css
@@ -6,13 +6,13 @@ h3{
     font-style: italic;
 }
 
-.headDiv {
+div.headDiv {
     border-top-style: solid;
     border-bottom-style: solid;
     text-align-last: center;
 
   }
-.bodyDiv{
+div.bodyDiv{
     border-top-style: solid;
     margin-left: 50px;
 }
